--- a/package.json
+++ b/package.json
@@ -6,18 +6,60 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.9.0",
+    "@cloudinary/url-gen": "^1.8.7",
+    "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.3",
+    "cloudinary": "^1.33.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "husky": "^8.0.3",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.4",
+    "netlify-cli": "^12.9.1",
     "next": "13.1.4",
+    "next-auth": "^4.18.8",
+    "prettier": "^2.8.3",
+    "rc-slider": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-hook-form": "^7.42.1",
+    "react-modal": "^3.16.1",
+    "react-query": "^3.39.2",
+    "react-range": "^1.8.14",
+    "react-yup": "^1.24.1",
+    "spinners-react": "^1.0.7",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^12.3.0",
+    "eslint-plugin-storybook": "^0.6.10",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
