--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/react": "^1.9.0",
     "@cloudinary/url-gen": "^1.8.7",
     "@heroicons/react": "^2.0.13",
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.1.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
